# backend/api/api.go
@@ -6,10 +6,11 @@
 package api
 
 import (
-    "github.com/gin-gonic/gin"
-    "github.com/kaichewy/GoShare/backend/controllers" // import functions to be executed for the api calls
+	"github.com/gin-gonic/gin"
+	"github.com/kaichewy/GoShare/backend/controllers" // import functions to be executed for the api calls
+	product "github.com/kaichewy/GoShare/backend/controllers/products"
+	"github.com/swaggo/files"       // swagger embed files
 	"github.com/swaggo/gin-swagger" // gin-swagger middleware
-	"github.com/swaggo/files" // swagger embed files
 )
 
 
@@ -27,15 +28,16 @@ func RegisterRoutes(r *gin.Engine) {
 	r.POST("/register", controllers.Register)
 	r.POST("/login", controllers.Login)
 
+	// After logged in
+	authorized := r.Group("/", controllers.AuthMiddleWare())
+	authorized.GET("/me", controllers.GetMyProfile)
+	// authorized.POST("buy", controllers.Buy)
 
-	//////////////////
-	// IGNORE BELOW //
-	//////////////////
+	// Products
+	r.GET("/products/:id", product.GetProduct)
+	r.GET("/products", product.GetAllProducts)
+	r.POST("/addProduct", product.AddProduct)
 
-	// authorized := r.Group("/", gin.BasicAuth(gin.Accounts{
-	// 	"foo":  "bar", // user:foo password:bar
-	// 	"manu": "123", // user:manu password:123
-	// }))
 
 	/* example curl for /admin with basicauth header
 	   Zm9vOmJhcg== is base64("foo:bar")
