# backend/controllers/user.go
@@ -4,9 +4,12 @@ import (
 	"errors"
 	"net/http"
 	"strconv" // package that converts string to int
+
 	"github.com/gin-gonic/gin"
 	"github.com/kaichewy/GoShare/backend/db"     // import database
 	"github.com/kaichewy/GoShare/backend/models" // import User model
+	"github.com/kaichewy/GoShare/backend/responses"
+	"github.com/kaichewy/GoShare/backend/utils"
 	"gorm.io/gorm"
 )
 
@@ -16,7 +19,9 @@ import (
 // @Tags         users
 // @Produce      json
 // @Param        id   path      int  true  "User ID"
-// @Success      200  {object}  gin.H
+// @Success 200 {object} responses.UserResponse "User data"
+// @Failure 404 {object} utils.CustomError "user not found"
+// @Failure 500 {object} utils.CustomError "database error"
 // @Security     ApiKeyAuth
 // @Router       /user/{id} [get]
 func GetUserInfo(c *gin.Context) {
@@ -28,13 +33,21 @@ func GetUserInfo(c *gin.Context) {
 	result := db.DB.First(&user, id)
 
 	if errors.Is(result.Error, gorm.ErrRecordNotFound) {
-        c.JSON(http.StatusNotFound, gin.H{"error": "User not found"})
+		errResp := utils.New(errors.New("user not found"), http.StatusNotFound)
+        c.JSON(http.StatusNotFound, errResp)
         return
     } else if result.Error != nil {
-        c.JSON(http.StatusInternalServerError, gin.H{"error": "Database error"})
+        errResp := utils.New(errors.New("database error"), http.StatusInternalServerError).WithDetails(result.Error.Error())
+		c.JSON(http.StatusInternalServerError, errResp)
         return
     }
 
+	response := responses.UserResponse{
+		ID: user.ID,
+		Name: user.Name,
+		Email: user.Email,
+	}
+
     // You can send the entire user struct if it’s safe
-    c.JSON(http.StatusOK, user)
+    c.JSON(http.StatusOK, response)
 }
